feat: Added repository structure

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,6 +34,15 @@
     "todo add image\n",
     "![title](\"img/picture.png\")\n",
     "\n",
+    "## The Repository\n",
+    "Clone the git repository. The jupiter notebook file alone will not provide full functionalities.\n",
+    "This jupiter notebook is the main executable and contains all the source code.\n",
+    "\n",
+    "The ./models/ folder contains the trained models and tensorboard logs, after executing our training script.\n",
+    "The ./replay/ folder contains the models and recorded simulations for our later example demonstrations.\n",
+    "The ./optuna/ folder contains the optuna logs after executing our optuna training script.\n",
+    "The ./prepared_optuna/ folder contains the optuna logs from our 30 hour execution session. \n",
+    "\n",
     "## Installation\n",
     "\n",
     "Since robosuite shows complications with windows, a linux or mac computer is required.\n",
@@ -41,9 +50,7 @@
     "This change resulted in crashes of wayland DSP so a X11 has to be used as a fallback. \n",
     "\n",
     "Our code is writen for python3.11. The following python packages are needed. \n",
-    "todo: numpy, robosuite, stable-baselines3...\n",
-    "\n",
-    "Clone the git repository. The jupiter notebook file alone will not provide full functionalities."
+    "todo: numpy, robosuite, stable-baselines3..."
    ]
   },
   {
