--- a/main.ipynb
+++ b/main.ipynb
@@ -49,13 +49,35 @@
     "On debian the non free cuda driver has to be installed as a kernel level module in order to use the GPU for calculations.\n",
     "This change resulted in crashes of wayland DSP so a X11 has to be used as a fallback. \n",
     "\n",
-    "Our code is writen for python3.11. The following python packages are needed. \n",
-    "todo: numpy, robosuite, stable-baselines3..."
+    "Our code is writen for python3.11. The following python packages are needed:\n",
+    "numpy, robosuite, stable-baselines3[extra], libhdf5, h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting h5py\n",
+      "  Downloading h5py-3.11.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.4 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.4/5.4 MB\u001b[0m \u001b[31m27.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in ./.ppenv/lib/python3.11/site-packages (from h5py) (2.0.1)\n",
+      "Installing collected packages: h5py\n",
+      "Successfully installed h5py-3.11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 -m pip install h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +122,7 @@
     "    gripper=\"default\",\n",
     "    controller=\"OSC_POSE\",\n",
     "    seed=12532135,\n",
-    "    contol_freq=20,\n",
+    "    control_freq=20,\n",
     "    horizon=2048,\n",
     "    camera_size=84,\n",
     "    episodes=200,\n",
@@ -109,7 +131,7 @@
     "    algortihm=\"PPO\",\n",
     "    gamma=0.99,\n",
     "    learning_rate=1e-3,\n",
-    "    n_step=2048,\n",
+    "    n_steps=2048,\n",
     ")\n",
     "\n",
     "test_name = str(parameters[\"robot\"]) + \"_freq\" + str(parameters[\"robot\"]) + \"_hor\" + str(parameters[\"horizon\"]) + \"_learn\" + str(parameters[\"learning_rate\"]) + \"_episodes\" + str(parameters[\"episodes\"]) + \"_control\" + str(parameters[\"controller\"])"
@@ -126,9 +148,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mNo private macro file found! (macros.py:53)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001b[1m\u001b[33m[robosuite WARNING] \u001b[0mTo setup, run: python /home/tobi/Documents/Pick-and-Place/.ppenv/lib/python3.11/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'n_steps'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 35\u001b[0m\n\u001b[1;32m     14\u001b[0m env \u001b[38;5;241m=\u001b[39m SubprocVecEnv([make_env(\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPickPlace\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28mdict\u001b[39m(\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m     i\n\u001b[1;32m     31\u001b[0m     ) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(parameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn_processes\u001b[39m\u001b[38;5;124m\"\u001b[39m])])\n\u001b[1;32m     34\u001b[0m env \u001b[38;5;241m=\u001b[39m VecNormalize(env)\n\u001b[0;32m---> 35\u001b[0m model \u001b[38;5;241m=\u001b[39m PPO(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMlpPolicy\u001b[39m\u001b[38;5;124m\"\u001b[39m, env, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, gamma\u001b[38;5;241m=\u001b[39mparameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgamma\u001b[39m\u001b[38;5;124m\"\u001b[39m], learning_rate\u001b[38;5;241m=\u001b[39mparameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m\"\u001b[39m], n_steps\u001b[38;5;241m=\u001b[39m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mn_steps\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, tensorboard_log\u001b[38;5;241m=\u001b[39mtest_name, )\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m#env = VecNormalize.load('./' + test_name + '/env.pkl', env)\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m#model = PPO.load(\"./\" + test_name + \"/model.zip\", env=env)\u001b[39;00m\n\u001b[1;32m     40\u001b[0m model\u001b[38;5;241m.\u001b[39mlearn(total_timesteps\u001b[38;5;241m=\u001b[39mparameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhorizon\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m*\u001b[39mparameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepisodes\u001b[39m\u001b[38;5;124m\"\u001b[39m], progress_bar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'n_steps'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "controller_config = load_controller_config(default_controller=parameters[\"controller\"])\n",
@@ -635,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
