feat: Removed config file dependencies for optuna skript

--- a/main.ipynb
+++ b/main.ipynb
@@ -86,7 +86,7 @@
     "from stable_baselines3.common.callbacks import EvalCallback, CheckpointCallback\n",
     "from robosuite.wrappers import GymWrapper\n",
     "\n",
-    "from stable_baselines3 import PPO, DDPG"
+    "from stable_baselines3 import PPO, DDPG, SAC"
    ]
   },
   {
@@ -116,7 +116,8 @@
     "    episodes=200,\n",
     "    n_processes=6,\n",
     "    # Algorithm \n",
-    "    algortihm=\"PPO\",\n",
+    "    algorithm=\"PPO\",\n",
+    "    policy=\"MlpPolicy\",\n",
     "    gamma=0.99,\n",
     "    learning_rate=1e-3,\n",
     "    n_steps=2048,\n",
@@ -286,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Further developments\n",
+    "### Further testing\n",
     "\n",
     "With these first tests we could test a variety of robot configurations and samples of parameters.\n",
     "We could identify the Sawyer robot with its default gripper and the PPO algorithm as our most promising candidates.\n",
@@ -376,7 +377,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "from torch import nn as nn\n",
     "from robosuite.controllers import load_controller_config\n",
+    "import optuna\n",
     "from optuna.visualization import plot_optimization_history, plot_slice\n",
     "\n",
     "\n",
@@ -385,7 +389,7 @@
     "study_name = \"study1\"\n",
     "storage_name = \"sqlite:///{}.db\".format(study_name)\n",
     "\n",
-    "# Define the environment setup\n",
+    "# Define the environment setup4\n",
     "def make_env(env_id, options, rank, seed=0):\n",
     "    def _init():\n",
     "        env = GymWrapper(suite.make(env_id, **options))\n",
@@ -409,10 +413,6 @@
     "        all_episode_rewards.append(np.sum(episode_rewards))\n",
     "    mean_reward = np.mean(all_episode_rewards)\n",
     "    return mean_reward\n",
-    "\n",
-    "def save_model(model_path, model, vec_env):\n",
-    "    model.save(model_path + \".zip\")\n",
-    "    vec_env.save(model_path + \".env\")\n",
     "\n",
     "def objective(trial):\n",
     "    # Suggest hyperparameters\n",
@@ -449,14 +449,10 @@
     "        f\"Value function coefficient: {vf_coef}, \"\n",
     "        f\"Network architecture: {net_arch_type}\")\n",
     "\n",
-    "    # Load configuration\n",
-    "    with open(\"config_hyperparams.yaml\") as stream:\n",
-    "        config = yaml.safe_load(stream)\n",
-    "\n",
-    "    controller_config = load_controller_config(default_controller=config[\"robot_controller\"])\n",
+    "    controller_config = load_controller_config(default_controller=parameters[\"controller\"])\n",
     "\n",
     "    env_options = {\n",
-    "        \"robots\": config[\"robot_name\"],\n",
+    "        \"robots\": parameters[\"robot\"],\n",
     "        \"controller_configs\": controller_config,\n",
     "        \"has_renderer\": False,\n",
     "        \"has_offscreen_renderer\": True,\n",
@@ -473,22 +469,16 @@
     "    }    \n",
     "    \n",
     "    # Setup environment\n",
-    "    if config[\"multiprocessing\"]:\n",
-    "        env = SubprocVecEnv([make_env(\"PickPlace\", env_options, i, config[\"seed\"]) for i in range(config[\"num_envs\"])], start_method='spawn')\n",
-    "        eval_env = SubprocVecEnv([make_env(\"PickPlace\", env_options, i, config[\"seed\"]) for i in range(config[\"num_eval_envs\"])], start_method='spawn')\n",
-    "        eval_env = VecNormalize(eval_env)\n",
-    "        # TODO: account when using multiple envs\n",
-    "        if batch_size > n_steps:\n",
-    "            batch_size = n_steps\n",
-    "    else:\n",
-    "        env = DummyVecEnv(make_env(\"PickPlace\", env_options, 0, config[\"seed\"]))\n",
-    "        eval_env = DummyVecEnv([make_env(\"PickPlace\", env_options, 0, config[\"seed\"])])\n",
-    "        eval_env = VecNormalize(eval_env)\n",
+    "    env = SubprocVecEnv([make_env(\"PickPlace\", env_options, i, parameters[\"seed\"]) for i in range(parameters[\"n_processes\"])], start_method='spawn')\n",
+    "    eval_env = SubprocVecEnv([make_env(\"PickPlace\", env_options, i, parameters[\"seed\"]) for i in range(parameters[\"n_processes\"])], start_method='spawn')\n",
+    "    eval_env = VecNormalize(eval_env)\n",
+    "    # TODO: account when using multiple envs\n",
+    "    if batch_size > n_steps:\n",
+    "        batch_size = n_steps\n",
     "\n",
-    "    if config[\"normalize\"]:\n",
-    "        env = VecNormalize(env)\n",
+    "    env = VecNormalize(env)\n",
     "\n",
-    "    device = torch.device(\"mps\") if torch.backends.mps.is_available() else torch.device(\"cpu\")\n",
+    "    device = torch.device(\"cuda\") if torch.backends.mps.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "    # Orthogonal initialization\n",
     "    ortho_init = False\n",
@@ -506,8 +496,8 @@
     "    activation_fn = {\"tanh\": nn.Tanh, \"relu\": nn.ReLU, \"elu\": nn.ELU, \"leaky_relu\": nn.LeakyReLU}[activation_fn_name]\n",
     "\n",
     "    # Initialize model\n",
-    "    if config[\"algorithm\"] == \"PPO\":\n",
-    "        model = PPO(config[\"policy\"],\n",
+    "    if parameters[\"algorithm\"] == \"PPO\":\n",
+    "        model = PPO(parameters[\"policy\"],\n",
     "                    env,\n",
     "                    learning_rate=learning_rate,\n",
     "                    batch_size=batch_size,\n",
@@ -527,12 +517,12 @@
     "                    tensorboard_log=None,\n",
     "                    device=device\n",
     "                    )\n",
-    "    elif config[\"algorithm\"] == \"DDPG\":\n",
+    "    elif parameters[\"algorithm\"] == \"DDPG\":\n",
     "        n_actions = env.action_space.shape[-1]\n",
     "        action_noise = NormalActionNoise(mean=np.zeros(n_actions), sigma=0.1 * np.ones(n_actions))\n",
-    "        model = DDPG(config[\"policy\"], env, action_noise=action_noise, learning_rate=learning_rate, batch_size=batch_size, gamma=gamma, verbose=0, tensorboard_log=None, device=device)\n",
-    "    elif config[\"algorithm\"] == \"SAC\":\n",
-    "        model = SAC(config[\"policy\"], env, learning_rate=learning_rate, batch_size=batch_size, gamma=gamma, verbose=0, tensorboard_log=None, device=device)\n",
+    "        model = DDPG(parameters[\"policy\"], env, action_noise=action_noise, learning_rate=learning_rate, batch_size=batch_size, gamma=gamma, verbose=0, tensorboard_log=None, device=device)\n",
+    "    elif parameters[\"algorithm\"] == \"SAC\":\n",
+    "        model = SAC(parameters[\"policy\"], env, learning_rate=learning_rate, batch_size=batch_size, gamma=gamma, verbose=0, tensorboard_log=None, device=device)\n",
     "    \n",
     "    '''\n",
     "    # Evaluation callback\n",
@@ -559,29 +549,28 @@
     "    return mean_reward\n",
     "\n",
     "# Optimize hyperparameters\n",
-    "if __name__ == \"__main__\":\n",
-    "    study = optuna.create_study(direction='maximize')\n",
-    "    study.optimize(objective, n_trials=50, timeout=90000)\n",
+    "study = optuna.create_study(direction='maximize')\n",
+    "study.optimize(objective, n_trials=50, timeout=90000)\n",
     "\n",
-    "    pruned_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.PRUNED]\n",
-    "    complete_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.COMPLETE]\n",
+    "pruned_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.PRUNED]\n",
+    "complete_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.COMPLETE]\n",
     "\n",
-    "    print('Study statistics: ')\n",
-    "    print('  Number of finished trials: ', len(study.trials))\n",
-    "    print('  Number of pruned trials: ', len(pruned_trials))\n",
-    "    print('  Number of complete trials: ', len(complete_trials))\n",
+    "print('Study statistics: ')\n",
+    "print('  Number of finished trials: ', len(study.trials))\n",
+    "print('  Number of pruned trials: ', len(pruned_trials))\n",
+    "print('  Number of complete trials: ', len(complete_trials))\n",
     "\n",
-    "    print('Best trial: ')\n",
-    "    trial = study.best_trial\n",
+    "print('Best trial: ')\n",
+    "trial = study.best_trial\n",
     "\n",
-    "    print('  Value: ', trial.value)\n",
-    "    print('  Params: ')\n",
-    "    for key, value in trial.params.items():\n",
-    "        print('    {}: {}'.format(key, value))\n",
+    "print('  Value: ', trial.value)\n",
+    "print('  Params: ')\n",
+    "for key, value in trial.params.items():\n",
+    "    print('    {}: {}'.format(key, value))\n",
     "\n",
-    "    print('Best hyperparameters: ', study.best_params)\n",
-    "    \n",
-    "    plot_optimization_history(study)"
+    "print('Best hyperparameters: ', study.best_params)\n",
+    "\n",
+    "plot_optimization_history(study)"
    ]
   },
   {
